force-app/main/default/objects/Servicing_Store__c/Servicing_Store__c.object-meta.xml
<CustomObject>
    <description>STRICT CHANGE CONTROL _ NO CHANGES UNLESS APPROVED FOR REPLICATION - Object created to share programs based on servicing level with downstream systems via outbound message</description>
    <label>Servicing Store</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Servicing Store #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servicing Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>