force-app/main/default/objects/Servicing_Store__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Servicing Stores</relationshipLabel>
    <relationshipName>Servicing_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>