force-app/main/default/objects/Servicing_Store__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date/Time that is populated when the Servicing Store record is no longer Active.</description>
    <inlineHelpText>Date/Time that is populated when the Servicing Store record is no longer Active.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>