force-app/main/default/objects/Servicing_Store__c/fields/Outbound_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message_Type__c</fullName>
    <label>Outbound Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Servicing Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>