force-app/main/default/objects/Servicing_Store__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Servicing Stores</relationshipLabel>
    <relationshipName>Servicing_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>