force-app/main/default/objects/Servicing_Store__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <formula>Program__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program ID</label>
    <type>Text</type>
</CustomField>