force-app/main/default/objects/Servicing_Store__c/fields/Program_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Service_Level__c</fullName>
    <label>Program Service Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>