force-app/main/default/objects/Servicing_Store__c/fields/Resend_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Resend_Outbound_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Outbound Message</label>
    <type>Checkbox</type>
</CustomField>