force-app/main/default/objects/Servicing_Store__c/fields/Servicing_Status__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Status__c</fullName>
    <label>Servicing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>