force-app/main/default/objects/Servicing_Store__c/fields/Time_Delay__c.field-meta.xml
<CustomField>
    <fullName>Time_Delay__c</fullName>
    <formula>Program__r.Published_Date__c - 0.038</formula>
    <label>Time Delay</label>
    <type>DateTime</type>
</CustomField>